--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
-<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/Calculator_App_Fixed/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using create-react-app"/><link rel="apple-touch-icon" href="/Calculator_App_Fixed/logo192.png"/><link rel="manifest" href="/Calculator_App_Fixed/manifest.json"/><title>React App</title><script defer="defer" src="/Calculator_App_Fixed/static/js/main.0b91ae2e.js"></script><link href="/Calculator_App_Fixed/static/css/main.7477eac2.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
+<!doctype html>
+<html lang="en">
+
+<head>
+    <meta charset="utf-8" />
+    <link />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <meta name="theme-color" content="#000000" />
+    <meta name="description" content="Web site created using create-react-app" />
+    <link />
+    <link rel="manifest" href="/Calculator_App_Fixed/manifest.json" />
+    <title>React App</title>
+    <script defer="defer" src="/Calculator_App_Fixed/static/js/main.0b91ae2e.js">
+
+    </script>
+    <link href="/Calculator_App_Fixed/static/css/main.7477eac2.css" rel="stylesheet">
+</head>
+
+<body>
+    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div>
+</body>
+
+</html>
