--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 
 <head>
     <meta charset="utf-8" />
-    <link />
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
@@ -13,7 +12,7 @@
     <script defer="defer" src="/Calculator_App_Fixed/static/js/main.0b91ae2e.js">
 
     </script>
-    <link href="/Calculator_App_Fixed/static/css/main.7477eac2.css" rel="stylesheet">
+    <link href="main.7477eac2.css" rel="stylesheet">
 </head>
 
 <body>
