--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script defer="defer" src="/Calculator_App_Fixed/static/js/main.0b91ae2e.js">
 
     </script>
-    <link href="static/css/main.7477eac2.css" rel="stylesheet">
+    <link href="/Calculator_App_Fixed/static/css/main.7477eac2.css" rel="stylesheet">
 </head>
 
 <body>
