--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Web site created using create-react-app" />
     <link />
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="manifest.json" />
     <title>React App</title>
-    <script defer="defer" src="/static/js/main.0b91ae2e.js">
+    <script defer="defer" src="static/js/main.0b91ae2e.js">
 
     </script>
-    <link href="/static/css/main.7477eac2.css" rel="stylesheet">
+    <link href="static/css/main.7477eac2.css" rel="stylesheet">
 </head>
 
 <body>
